--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Noomee</string>
     <string name="log_in">Logging in...</string>
-    <string name="title_section1">Section 1</string>
+    <string name="main_section">Main</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -11,5 +11,7 @@
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string name="action_log_out">Log out</string>
-
+    <string name="activity_tab">Activity</string>
+    <string name="decide_tab">Decider</string>
+    <string name="decide_tab_prompt">What are you craving for?</string>
 </resources>
