Add testing and fixed more problems.
- Add androidTest dependencies
- Fix NPE on Chi
- Add Shake and random ability.
- Add restaurant view.
 * Use square.picasso to load images.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="decide_more_options">More Options</string>
     <string name="Loading">Loading&#8230;</string>
 
+    <string name="restaurant_icon">Restaurant Icon</string>
+
     <!--Testing purpose-->
     <string-array name="list_of_countries">
         <item >USA</item>
