Use Retrofit and refactor ChiTagView
- Use retrofit as API client
- Use onMeasure and onLayout to display restaurant tags
- Minor fix on GeoProvider
 * Add promote dialog if gps is not enabled

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="Loading">Loading&#8230;</string>
 
     <string name="restaurant_icon">Restaurant Icon</string>
+    <string name="location_disabled">Location Disabled</string>
+    <string name="location_disalbed_message">Please enable location service.</string>
 
     <!--Testing purpose-->
     <string-array name="list_of_countries">
