Add local push notifications.
- Use alarm manager to schedule "tasks" to start notifications.
- Set notification style to bigPictureStyle.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -24,6 +24,12 @@
     <string name="location_disabled">Location Disabled</string>
     <string name="location_disalbed_message">Please enable location service.</string>
 
+    <string-array name="push_promote">
+        <item>How about %1$s?</item>
+        <item>What about %1$s?</item>
+        <item>%1$s, sounds good?</item>
+    </string-array>
+
     <!--Testing purpose-->
     <string-array name="list_of_countries">
         <item >USA</item>
