--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="decide_more_options">More Options</string>
     <string name="Loading">Loading&#8230;</string>
 
+    <string name="user_icon">User Icon</string>
     <string name="restaurant_icon">Restaurant Icon</string>
     <string name="location_disabled">Location Disabled</string>
     <string name="location_disalbed_message">Please enable location service.</string>
