--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,18 +4,20 @@
     <string name="app_name">Noomee</string>
     <string name="log_in">Logging in&#8230;</string>
     <string name="main_section">Main</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
+    <string name="action_debug">Debug</string>
     <string name="action_log_out">Log out</string>
     <string name="activity_tab">Activity</string>
     <string name="decide_tab">Decider</string>
     <string name="decide_cuisines">Cuisines</string>
     <string name="decide_more_options">More Options</string>
     <string name="Loading">Loading&#8230;</string>
+
+    <string name="debug_preference">Debug Preference</string>
+    <string name="pref_enable_local_server">pref_enable_local_server</string>
 
     <string name="user_icon">User Icon</string>
     <string name="restaurant_icon">Restaurant Icon</string>
